Fixed visibility while dragging bug

--- a/src/App.scss
+++ b/src/App.scss
@@ -91,6 +91,7 @@ body {
                 cursor: grab;
                 cursor: -moz-grab;
                 cursor: -webkit-grab;
+                visibility: visible;
 
                 &:active {
                     cursor: grabbing;
